--- a/web-driver-management/assignment/src/main/resources/templates/fragments/navbar.html
+++ b/web-driver-management/assignment/src/main/resources/templates/fragments/navbar.html
@@ -18,13 +18,13 @@
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/drivers/">Drivers</a>
+                        <a class="nav-link" href="/drivers">Drivers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/vehicles/">Vehicles</a>
+                        <a class="nav-link" href="/vehicles">Vehicles</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/assignments/">Assignments</a>
+                        <a class="nav-link" href="/assignments">Assignments</a>
                     </li>
                 </ul>
                 <form role="search">
