--- a/web-driver-management/assignment/src/main/resources/templates/home/assignments.html
+++ b/web-driver-management/assignment/src/main/resources/templates/home/assignments.html
@@ -31,7 +31,7 @@
                     data-assignment-name=${assignment.name},
                     data-assignment-brand=${assignment.brand}">Delete</button>
 
-            <button class="btn btn-primary add-assignment">Assign</button>
+            <!-- <button class="btn btn-primary add-assignment">Assign</button> -->
         </td>
     </tr>
     </tbody>
