--- a/web-driver-management/assignment/src/main/resources/templates/home/drivers.html
+++ b/web-driver-management/assignment/src/main/resources/templates/home/drivers.html
@@ -201,7 +201,7 @@
                     contentType: "application/json",
                     data: JSON.stringify(data),
                     success: function(response) {
-                        window.location.href = '/assignments/';
+                        window.location.href = '/assignments';
                     },
                 });
             },
