--- a/web-driver-management/assignment/src/main/resources/templates/register/index.html
+++ b/web-driver-management/assignment/src/main/resources/templates/register/index.html
@@ -28,6 +28,10 @@
             <input name="lastname" type="text" class="form-control" id="floatingLName" placeholder="Last Name">
             <label for="floatingLName">LastName</label>
         </div>
+        <div class="form-floating">
+            <input name="phone" type="text" class="form-control" id="floatingPhone" placeholder="Phone">
+            <label for="floatingPhone">Phone</label>
+        </div>
 
         <button class="btn btn-primary w-100 py-2" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
