--- a/web-driver-management/assignment/src/main/resources/templates/home/users.html
+++ b/web-driver-management/assignment/src/main/resources/templates/home/users.html
@@ -16,9 +16,9 @@
     </tr>
     <tr>
         <th>Picture</th>
-        <th>First Name</th>
-        <th>Last Name</th>
+        <th>Username</th>
         <th>Phone</th>
+        <th>Roles</th>
         <th>Operations</th>
 
     </tr>
@@ -26,22 +26,23 @@
     <tbody>
     <tr th:each="user: ${users}">
         <td><img th:src="${'/images/' + user.imgUrl}" alt="" width="150" height="150"/></td>
-        <td th:text="${user.firstname}"></td>
-        <td th:text="${user.lastname}"></td>
+        <td th:text="${user.username}"></td>
         <td th:text="${user.phone}"></td>
+        <td th:text="${user.roles}"></td>
+
         <td>
             <button class="btn btn-warning update-user"
-                    th:attr="data-user-name=${user.firstname},
+                    th:attr="data-user-name=${user.username},
                     data-user-phone=${user.phone},
                     data-user-id=${user.id}">Update</button>
             <button class="btn btn-danger delete-user"
-                    th:attr="data-user-name=${user.firstname},
+                    th:attr="data-user-name=${user.username},
                     data-user-id=${user.id}">Delete</button>
             <button class="btn btn-success delete-user"
-                    th:attr="data-user-name=${user.firstname},
+                    th:attr="data-user-name=${user.username},
                     data-user-id=${user.id}">Upload Image</button>
             <button class="btn btn-primary assign-user"
-                    th:attr="data-user-name=${user.firstname},
+                    th:attr="data-user-name=${user.username},
                     data-user-id=${user.id}">Assign Role</button>
         </td>
     </tr>
@@ -51,5 +52,167 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<!--<script th:inline="javascript">-->
+
+<!--    $('.add-user').click(function() {-->
+<!--        Swal.fire({-->
+<!--            title: 'Add User',-->
+<!--            html:-->
+<!--                '<input id="fname" class="swal2-input" placeholder="First Name">' +-->
+<!--                '<input id="lname" class="swal2-input" placeholder="Last Name">' +-->
+<!--                '<input id="phone" class="swal2-input" placeholder="Phone">',-->
+<!--            showCancelButton: true,-->
+<!--            confirmButtonText: 'Save',-->
+<!--            cancelButtonText: 'Close',-->
+<!--            showLoaderOnConfirm: true,-->
+<!--            preConfirm: () => {-->
+<!--                const fname = $('#fname').val();-->
+<!--                const lname = $('#lname').val();-->
+<!--                const phone = $('#phone').val();-->
+
+<!--                return $.ajax({-->
+<!--                    url: '/users/add',-->
+<!--                    method: 'POST',-->
+<!--                    contentType: 'application/json',-->
+<!--                    dataType: 'json',-->
+<!--                    data: JSON.stringify({ fname, lname, phone}),-->
+<!--                    success: function(response) {-->
+<!--                        location.reload();-->
+<!--                    },-->
+<!--                });-->
+<!--            },-->
+<!--        })-->
+<!--    });-->
+
+<!--    $('.delete-user').click(function() {-->
+<!--        var userBrand = $(this).data('user-brand');-->
+<!--        var userModel = $(this).data('user-model');-->
+<!--        var userId = $(this).data('user-id');-->
+<!--        Swal.fire({-->
+<!--            title: 'Delete User',-->
+<!--            html:-->
+<!--                '<input class="form-control" type="text" value="' + userBrand + '" disabled><br>' +-->
+<!--                '<input class="form-control" type="text" value="' + userModel + '" disabled>',-->
+<!--            showCancelButton: true,-->
+<!--            confirmButtonText: 'Delete',-->
+<!--            cancelButtonText: 'Close',-->
+<!--            showLoaderOnConfirm: true,-->
+<!--            preConfirm: function() {-->
+<!--                $.ajax({-->
+<!--                    url: '/users/delete',-->
+<!--                    method: 'DELETE',-->
+<!--                    dataType: "json",-->
+<!--                    contentType: "application/json",-->
+<!--                    data: JSON.stringify({ id: userId }),-->
+<!--                    success: function(response) {-->
+<!--                        location.reload();-->
+<!--                    },-->
+<!--                });-->
+<!--            },-->
+<!--        });-->
+<!--    });-->
+
+<!--    $('.update-user').click(function() {-->
+<!--        var userBrand = $(this).data('user-brand');-->
+<!--        var userModel = $(this).data('user-model');-->
+<!--        var userColor = $(this).data('user-color');-->
+<!--        var userType = $(this).data('user-type');-->
+<!--        var id = $(this).data('user-id');-->
+<!--        Swal.fire({-->
+<!--            title: 'Update User',-->
+<!--            html:-->
+<!--                '<input id="brand" class="swal2-input" type="text" value="' + userBrand + '"><br>' +-->
+<!--                '<input id="model" class="swal2-input" type="text" value="' + userModel + '"><br>' +-->
+<!--                '<input id="color" class="swal2-input" type="text" value="' + userColor + '"><br>' +-->
+<!--                '<input id="type" class="swal2-input" type="text" value="' + userType + '"><br>',-->
+<!--            showCancelButton: true,-->
+<!--            confirmButtonText: 'Save',-->
+<!--            cancelButtonText: 'Close',-->
+<!--            showLoaderOnConfirm: true,-->
+<!--            preConfirm: function() {-->
+<!--                const brand = $('#brand').val();-->
+<!--                const model = $('#model').val();-->
+<!--                const color = $('#color').val();-->
+<!--                const type = $('#type').val();-->
+<!--                $.ajax({-->
+<!--                    url: '/users/update',-->
+<!--                    method: 'PUT',-->
+<!--                    dataType: "json",-->
+<!--                    contentType: "application/json",-->
+<!--                    data: JSON.stringify({ id, brand, model, color, type }),-->
+<!--                    success: function(response) {-->
+<!--                        location.reload();-->
+<!--                    },-->
+<!--                });-->
+<!--            },-->
+<!--        });-->
+<!--    });-->
+
+<!--    var driverList = /*[[ ${drivers} ]]*/ [];-->
+<!--    $('.assign-user').click(function() {-->
+
+<!--        var userBrand = $(this).data('user-brand');-->
+<!--        var userId = $(this).data('user-id');-->
+
+<!--        var options = '';-->
+
+<!--        for (var i = 0; i < driverList.length; i++) {-->
+<!--            options += '<option value="' + driverList[i].id + '">' + driverList[i].name + '</option>';-->
+<!--        }-->
+<!--        Swal.fire({-->
+<!--            title: 'Assign user',-->
+<!--            html:-->
+<!--                '<input id="name" class="form-control" type="text" value="' + userBrand + '" disabled><br>' +-->
+<!--                '<div class="input-group mb-3">\n' +-->
+<!--                '  <label class="input-group-text" for="driver">Drivers</label>\n' +-->
+<!--                '  <select class="form-select" id="driver">' +-->
+<!--                '    <option selected>Choose...</option>' + options +-->
+<!--                '  </select>\n' +-->
+<!--                '</div>'+-->
+<!--                '<div class="input-group mb-3">\n' +-->
+<!--                '  <label class="input-group-text" for="inputGroupSelect01">Date</label>\n' +-->
+<!--                '  <input id="date" type="date" class="form-control"/>' +-->
+<!--                '  </select>\n' +-->
+<!--                '</div>' +-->
+<!--                '<div class="input-group mb-3">\n' +-->
+<!--                '  <span class="input-group-text" id="inputGroup-sizing-default">Days</span>\n' +-->
+<!--                '  <input id="day" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">\n' +-->
+<!--                '</div>',-->
+<!--            showCancelButton: true,-->
+<!--            confirmButtonText: 'Save',-->
+<!--            cancelButtonText: 'Close',-->
+<!--            showLoaderOnConfirm: true,-->
+<!--            preConfirm: function() {-->
+<!--                const driverId = $('#driver').val()-->
+<!--                const assignDate = $('#date').val()-->
+<!--                const days = parseInt($('#day').val());-->
+
+
+<!--                const assignedDateObj = new Date(assignDate);-->
+<!--                assignedDateObj.setDate(assignedDateObj.getDate() + days);-->
+<!--                const returnDate = assignedDateObj.toISOString().split('T')[0];-->
+
+<!--                const data = {-->
+<!--                    driverId: driverId,-->
+<!--                    userId: userId,-->
+<!--                    assignedDate: assignDate,-->
+<!--                    returnDate: returnDate-->
+<!--                };-->
+<!--                $.ajax({-->
+<!--                    url: '/assignments/add',-->
+<!--                    method: 'POST',-->
+<!--                    dataType: "json",-->
+<!--                    contentType: "application/json",-->
+<!--                    data: JSON.stringify(data),-->
+<!--                    success: function(response) {-->
+<!--                        window.location.href = '/assignments';-->
+<!--                    },-->
+<!--                });-->
+<!--            },-->
+
+<!--        });-->
+<!--    });-->
+
+<!--</script>-->
 </body>
 </html>
