--- a/web-driver-management/assignment/src/main/resources/templates/register/index.html
+++ b/web-driver-management/assignment/src/main/resources/templates/register/index.html
@@ -13,20 +13,12 @@
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
         <div class="form-floating">
-            <input name="email" type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
+            <input name="username" type="text" class="form-control" id="floatingInput" placeholder="Username">
+            <label for="floatingInput">Username</label>
         </div>
         <div class="form-floating">
             <input name="password" type="password" class="form-control" id="floatingPassword" placeholder="Password">
             <label for="floatingPassword">Password</label>
-        </div>
-        <div class="form-floating">
-            <input name="firstname" type="text" class="form-control" id="floatingFName" placeholder="Name">
-            <label for="floatingFName">FirstName</label>
-        </div>
-        <div class="form-floating">
-            <input name="lastname" type="text" class="form-control" id="floatingLName" placeholder="Last Name">
-            <label for="floatingLName">LastName</label>
         </div>
         <div class="form-floating">
             <input name="phone" type="text" class="form-control" id="floatingPhone" placeholder="Phone">
